compiler/tools/fpp-check/test/event/bad_throttle_interval_useconds.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/event/bad_throttle_interval_useconds.fpp:5.11
    every {useconds=1000000}
          ^
error: invalid integer value 1000000
useconds must be in the range [0, 999999]
